--- a/app/OnyxDemo/src/main/res/values/dimens.xml
+++ b/app/OnyxDemo/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
     <dimen name="dotted_line_width">0.5dp</dimen>
     <dimen name="dotted_line_dash_gap">5dp</dimen>
     <dimen name="dotted_line_dash_width">1.5dp</dimen>
+
+    <dimen name="common_text_size">30sp</dimen>
+    <dimen name="button_minHeight">48dp</dimen>
 </resources>
