--- a/app/OnyxDemo/src/main/res/layout/function_item_layout.xml
+++ b/app/OnyxDemo/src/main/res/layout/function_item_layout.xml
@@ -5,15 +5,28 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_margin="2dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:background="@drawable/text_focus_background"
+        android:padding="2dp"
+        android:focusable="true"
+        android:orientation="vertical">
         <TextView
             android:id="@+id/function_item_title"
             android:textSize="30sp"
             android:textColor="@android:color/black"
             android:gravity="center"
-            android:background="@drawable/text_focus_background"
             android:focusable="true"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/function_item_title_sub"
+            android:textSize="15sp"
+            android:textColor="@android:color/black"
+            android:gravity="center"
+            android:visibility="gone"
+            android:focusable="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </layout>
